tests/error_display/test_hll_out_obligation_unfulfilled_display.err.expected
error: at 2:27: [INIT-RefObligationUnfulfilled] In function 'f': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 2 |         fn f(r: &out i64) {
   |                           ^
  = note: reference declared here
   |
 2 |         fn f(r: &out i64) {
   |              ^^^^^^^^^^^
